# wrestling-booking-sim

./: CMakeLists.txt  README.md  championship.cpp  championship.h  gamedatamanager.cpp  gamedatamanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  match.cpp  match.h  randomUtilities.h  resources.qrc  rivalry.cpp  rivalry.h  show.cpp  show.h  team.cpp  team.h  wrestler.cpp  wrestler.h
data/: default_roster.db  first_name_female.txt  first_name_male.txt  last_name.txt
saveFiles/: game_data.db
